tests/suite/analyze/snapshots/suite__analyze__partial_redundancy_elimination__basic_loop_postponable.snap
---
source: tests/suite/analyze/partial_redundancy_elimination.rs
assertion_line: 71
expression: postponable
---

                               basic_loop


  +-------------------------------------------------------------------+
  |                                                                   |
  |                   +--------------------------------------------+  |
  |                   |                   enter:                   |  |
  |                   | {}                                         |  |
  |                   | (MOVE (TEMP _a) (CONST 0))                 |  |
  |                   | {}                                         |  |
  |                   | (JUMP r#loop)                              |  |
  |                   | {(ADD (TEMP _a) (TEMP _b))}                |  |
  |                   +--------------------------------------------+  |
  |                     |                                             |
  |                     |                                             |
  |                     v                                             |
+---------------+     +--------------------------------------------+  |
|               |     |                  r#loop:                   |  |
|    split:     |     | {}                                         |  |
| {}            |     | (MOVE (TEMP _c) (ADD (TEMP _a) (TEMP _b))) |  |
| (JUMP r#loop) |     | {}                                         |  |
| {}            |     | (CJUMP (EQ (CONST 0) (CONST 0)) split)     |  |
|               | <-- | {}                                         | <+
+---------------+     +--------------------------------------------+
                        |
                        |
                        v
                      +--------------------------------------------+
                      |                fallthrough:                |
                      | {}                                         |
                      | (JUMP exit)                                |
                      | {}                                         |
                      +--------------------------------------------+
                        |
                        |
                        v
                      +--------------------------------------------+
                      |                   exit:                    |
                      | {}                                         |
                      +--------------------------------------------+

