tests/suite/analyze/snapshots/suite__analyze__partial_redundancy_elimination__call_argument_earliest.snap
---
source: tests/suite/analyze/partial_redundancy_elimination.rs
assertion_line: 138
expression: earliest
---

                      call_argument

+---------------------------------------------------------+
|                         enter:                          |
| {(ADD (CONST 1) (CONST 2))}                             |
| (EXP (CALL (NAME black_box) (ADD (CONST 1) (CONST 2)))) |
| {}                                                      |
| (JUMP exit)                                             |
| {}                                                      |
+---------------------------------------------------------+
  |
  |
  v
+---------------------------------------------------------+
|                          exit:                          |
| {}                                                      |
+---------------------------------------------------------+

